[gd_scene load_steps=3 format=2]

[ext_resource path="res://Table.tscn" type="PackedScene" id=1]
[ext_resource path="res://Room.gd" type="Script" id=2]

[node name="Room" type="Spatial"]
script = ExtResource( 2 )

[node name="Table" parent="." instance=ExtResource( 1 )]

[node name="CameraLeft" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.173648, 0.984807, 0, -0.984807, 0.173648, 0, 85, 50 )
fov = 60.0
near = 1.0
far = 500.0

[node name="CameraRight" type="Camera" parent="."]
transform = Transform( -0.928739, -0.365103, 0.0643775, 0, 0.173648, 0.984808, -0.370736, 0.914629, -0.161274, 1.52588e-05, 59.8862, -1.21891 )
fov = 59.0625
near = 1.0
far = 500.0

[node name="Score" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_top = 20.0
grow_horizontal = 0
rect_scale = Vector2( 2, 2 )
text = "0 - 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpotLight1" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -80, 200, -50 )
light_energy = 0.6
light_specular = 0.71
shadow_enabled = true
shadow_bias = 4.0
shadow_contact = 1.5
spot_range = 300.0
spot_attenuation = 0.329877
spot_angle = 10.0
spot_angle_attenuation = 1.93187

[node name="SpotLight2" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -80, 200, 50 )
light_energy = 0.6
light_specular = 0.71
shadow_enabled = true
shadow_bias = 4.0
shadow_contact = 1.5
spot_range = 300.0
spot_angle = 15.0

[node name="SpotLight3" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 80, 200, -50 )
light_energy = 0.6
light_specular = 0.71
shadow_enabled = true
shadow_bias = 4.0
shadow_contact = 1.5
spot_range = 300.0
spot_angle = 15.0

[node name="SpotLight4" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 80, 200, 50 )
light_energy = 0.6
light_specular = 0.71
shadow_enabled = true
shadow_bias = 4.0
shadow_contact = 1.5
spot_range = 300.0
spot_angle = 15.0

[node name="Above" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 44.2516, 0 )
light_energy = 0.5
light_specular = 0.71
shadow_enabled = true
shadow_bias = 6.43
